# ppst

./: .gitignore  CLAUDE.md  Cargo.toml  OPERATIONS.md  README.md  input.css  next_step.txt  tailwind.config.js
.agent/: tech_stack_and_architecture.md
.agent/workflows/: analyze_incoming_changes.md  ensure_consistency.md  gitpush.md
.cargo/: config.toml
.copilot/: README.md
.copilot/memory/: constitution.md
.copilot/scripts/: README.md
.copilot/scripts/bash/: new-spec.sh
.copilot/templates/: plan-template.md  spec-template.md  tasks-template.md
.github/copilot/: README.md  constitution.md  plan.md  specify.md  tasks.md
.specify/memory/: constitution.md
.trae/rules/: project_rules.md
data/contacts/: .gitignore
specs/001-homepage/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-homepage/checklists/: requirements.md
specs/001-homepage/contracts/: http-endpoints.md
src/: app.rs  constants.rs  error.rs  input.css  lib.rs  main.rs  routes.rs
src/components/: footer.rs  header.rs  mod.rs
src/components/layout/: footer.rs  header.rs  mod.rs
src/components/maps/: directions.rs  mod.rs
src/components/ui/: icons.rs  mod.rs
src/config/: academy_data.rs  mod.rs
src/handlers/: contact.rs  homepage.rs  mod.rs
src/models/: academy.rs  contact.rs  mod.rs
src/pages/: about.rs  admissions.rs  contact.rs  home.rs  mission.rs  mod.rs  not_found.rs  policies.rs  programs.rs
src/pages/home/: achievements.rs  admissions.rs  contact.rs  hero.rs  mission.rs  mod.rs  policies.rs  programs.rs  teaching.rs
src/server/: file_store.rs  mod.rs
src/storage/: file_store.rs  mod.rs
static/css/: main.css  tailwind.css
static/css/abstracts/: _mixins.css  _variables.css
static/css/base/: _reset.css  _typography.css
static/css/components/: _alert.css  _avatar.css  _button.css  _card.css  _form.css  _instructor-card.css  _logo.css  _navigation.css  _spinner.css
static/css/layout/: _container.css  _footer.css  _grid.css  _header.css  _page.css  _section.css
static/css/pages/: _homepage.css
static/css/themes/: _default.css
static/css/vendors/: _htmx.css
static/js/: main.js
templates/: base.html  homepage.html
templates/partials/: admissions.html  contact_error.html  contact_form.html  contact_success.html  header.html  instructors.html  mission.html  policies.html  programs.html  programs_content.html  server_error.html  ui.html
