[package]
name = "ppst-academy"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos full-stack framework
leptos = { version = "0.8" }
leptos_axum = { version = "0.8", optional = true }
leptos_router = { version = "0.8" }
leptos_meta = { version = "0.8" }

# Web framework (server-side)
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "compression-gzip"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
time = { version = "0.3", features = ["serde", "formatting", "macros", "local-offset", "parsing"] }

# Email validation
regex = "1.12"

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# Async utilities
futures = "0.3"
http = "1.4"

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
csr = [
    "leptos/csr",
]
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:js-sys",
    "dep:console_error_panic_hook",
]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing-subscriber",
]

[package.metadata.leptos]
# Project output name
output-name = "ppst-academy"

# Site root served by the server
site-root = "target/site"

# Site address (0.0.0.0 for external access)
site-addr = "0.0.0.0:3000"

# Browser package directory within site-root
site-pkg-dir = "pkg"

# Style file (Tailwind output)
style-file = "style/output.css"

# Tailwind configuration (v4 CSS-native, no JS config needed)
tailwind-input-file = "input.css"

# Assets directory copied to site-root
assets-dir = "public"

# Server binary features
bin-features = ["ssr"]

# Frontend library features
lib-features = ["hydrate"]

# Watch additional files for changes
watch-additional-files = ["input.css"]

# Environment variable prefix
env-prefix = "PPST_"

# Reload port for hot reload
reload-port = 3001

# End-to-end testing command
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.23"
